syntax = "proto3";

package bio_sequence_services;

// Data type definitions


enum StatusDataset{

    state_origin = 0
    state_transformad_to_codon = 1;
    state_cleaned = 2;
}

message Protein{
    string id = 0;
    string protein = 1;
}

message NumericCodons {
    string id = 1;
    uint32 codon_sequence = 2;
}

message NucleotideSequence {
    string id = 1;
    string sequence = 2;
}

// Request messages

message StoreNucleotideSequences {
    repeated NucleotideSequence sequences = 1;
    string dataset_id = 2;
}

message TransformFromNucleotidesToCodons {
    string dataset_id = 1;
}

message traductionToProtein{
    string dataset_id = 1;
    
}

message getDataset{
    string dataset_id = 1;
    StatusDataset status_dataset = 2;
}

// Response messages

message ResponseStore {
    bool status = 1;
    string msg = 2;
}

message ResponseTransformNToC {
    bool status = 1;
    string msg = 2;
}

message ResponsetraductionToProtein{
    repeated Protein protein = 1;
    status = 2;
    msg = 3;
}





